packages/dioxide/dioxide-1.0.1.tar.gz/dioxide-1.0.1/tests/type_checking/invalid/invalid_lifecycle_sync_methods.py
"""
Invalid usage: @lifecycle decorator with synchronous methods instead of async.

This file should FAIL mypy type checking because the methods are not async.
"""

from dioxide import (
    lifecycle,
    service,
)


@service
@lifecycle
class DatabaseWithSyncMethods:
    """Service with sync methods instead of async - should fail mypy."""

    def __init__(self) -> None:
        self.connected = False

    def initialize(self) -> None:
        """Wrong - should be async def."""
        self.connected = True

    def dispose(self) -> None:
        """Wrong - should be async def."""
        self.connected = False


# This should fail type checking
db = DatabaseWithSyncMethods()
